[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-unity-catalog-checkpoint"
version = "0.0.2"
description = "Unity Catalog-backed persistence for LangChain and LangGraph"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Nate Fleming", email = "nate.fleming@databricks.com"}
]
maintainers = [
    {name = "Nate Fleming", email = "nate.fleming@databricks.com"}
]
keywords = [
    "langchain",
    "langgraph",
    "databricks",
    "unity-catalog",
    "checkpoint",
    "persistence",
    "store",
    "memory",
    "agents",
    "llm",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.73.0",
    "langchain>=1.0.3",
    "langgraph>=1.0.2",
    "loguru>=0.7.3",
]

[project.urls]
Homepage = "https://github.com/natefleming/langgraph_unity_catalog_checkpoint"
Repository = "https://github.com/natefleming/langgraph_unity_catalog_checkpoint"
Issues = "https://github.com/natefleming/langgraph_unity_catalog_checkpoint/issues"
Documentation = "https://github.com/natefleming/langgraph_unity_catalog_checkpoint#readme"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "twine>=5.0.0",
    "python-dotenv>=1.0.0",
    "databricks-langchain>=0.9.0",
]
examples = [
    "databricks-langchain>=0.9.0",
    "mlflow>=3.5.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]  # Allow missing annotations and asserts in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short --color=yes"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring actual Databricks connection",
    "slow: Tests that take a long time to run",
    "asyncio: Async tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

